# testme

./: .gitlab-ci.yml  .travis.yml  README.rst
.github/workflows/: github-ci.yml
doc/: requirements.txt
doc/source/: api.rst  conf.py  description.rst  index.rst  link.rst  parameter.rst  requirement.rst  uml.rst  usage.rst
doc/source/api/: script.inc
doc/source/api/script/: testme.inc
doc/source/parameter/: type.inc
doc/source/usage/: virtualenv.inc
doc/uml/: ansible.txt  ansible_exist_test.txt  ansible_setup.txt  bats.txt  main.txt  test.txt
example/: test-playbook.yml  test.bats  test.py
example/pyboom/: pyproject.toml  tox.ini
example/pyboom/pyboom/: pyboom.py
example/role/meta/: main.yml
example/role/molecule/default/: converge.yml  molecule.yml
example/role/tasks/: main.yml
example/role/test/: conftest.py  library  test-playbook-module.yml  test-playbook-plugin.yml  test-playbook-role.yml  test_module.py  test_plugin.py  test_plugins
example/role/test_plugins/: __init__.py  example.py
test/: ansible.bats  bats.bats  docker.bats  molecule.bats  poetry.bats  pytest.bats  shared.bash  testme.bats  tox.bats
