[tool.poetry]
name = "pyboom"
version = "0.1.0"
description = ""
authors = ["constrict0r <constrict0r@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.14.5"

[tool.tox]
legacy_tox_ini= """
[tox]
skipsdist = True
envlist = py{3}

[testenv]
deps =
  poetry
  pytest
commands =
  poetry install
  py.test tests

[testenv:report]
deps =
  coverage
skip_install = true
commands =
  coverage report
  coverage html

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
